# data-structures

./: CMakeLists.txt  README.md  build.sh
algorithms/: CMakeLists.txt  beat_the_market.cpp  bst_node_path.cpp  factorial_zeroes.cpp  find_kth_smallest.cpp  grep.cpp  maximal_subarray.cpp  reverse_words.cpp  shuffle.cpp
cpp/: LockFreeQueue.h  README.md
cpp/algorithms/: atoi.cpp  bst_node_path.cpp  maximal_subarray.cpp  reverse_words.cpp
cpp/exercises/: delete_list_node.cpp  hamming_weight.cpp  is_int_palindrome.cpp  list_intersection.cpp  max_product_word_lengths.cpp  move_zeroes.cpp  odd_man_out.cpp  pascal_triangle.cpp  queue_using_stacks.cpp  reverse_linked_list.cpp  roman_to_int.cpp  sort_colors.cpp  valid_anagram.cpp
cpp/exercises/trees/: min_depth.cpp  traversals.cpp
cpp/sorting/: merge_sort.h  quick_sort.cpp  quick_sort.h
cpp/utils/: array_utils.cpp  array_utils.h
exercises/: CMakeLists.txt  binary_search.py  excel_column_number.cpp  has_duplicate.cpp  invert_tree.cpp  is_power_of_two.cpp  is_tree_balanced.cpp  is_ugly_number.cpp  list_intersection.cpp  lowest_common_ancestor.cpp  majority_element.cpp  max_tree_depth.cpp  merge_sorted_arrays.cpp  merge_two_lists.cpp  move_zeroes.cpp  pascal_triangle.cpp  plus_one.cpp  rectangle_area.cpp  remove_array_duplicates.cpp  remove_list_duplicates.cpp  reverse_bits.cpp  same_tree.cpp  search_index.py  sort_colors.cpp  tree_level_traversal.cpp  tree_min_depth.cpp  tree_path_sum.cpp  valid_anagram.cpp  valid_number.cpp
exercises/trees/: CMakeLists.txt  binary_tree_paths.cpp  from_sorted_array.cpp  from_traversals.cpp  inorder_traversal.cpp  invert_tree.cpp  is_tree_balanced.cpp  leaf_paths.cpp  level_order_traversal.cpp  max_depth.cpp  path_sum.cpp  same_tree.cpp  traversals.cpp  tree_level_traversal.cpp  tree_min_depth.cpp  tree_path_sum.cpp
python/: README.md  binary_search.py  bootstrap.sh  run.sh
python/exercises/: find_pair_with_sum.py  sort_binary_array.py
python/exercises/arrays/: find_distinct_combinations.py  find_duplicate_element.py  find_equilibrium_indices.py  find_largest_consecutive_subarray.py  find_majority_element.py  find_pair_with_sum.py  inplace_merge_two_arrays.py  knapsack_problem.py  replace_elements_with_product.py  sort_binary_array.py
python/exercises/binary_search_trees/: breadth_first_search.py  depth_first_search.py  heap_manipulation.py  insertion.py  lowest_common_ancestor.py  tree_validation.py
python/exercises/binary_trees/: node.py  traverse_inorder.py  traverse_left_view.py  traverse_level_order.py  traverse_postorder.py  traverse_preorder.py  traverse_spiral_order.py  traverse_top_view.py  tree_equality.py  tree_height.py  tree_max_sum_path.py  tree_width.py
python/exercises/bitwise/: count_set_bits.py  find_odd_occuring_element.py  find_power_set.py  is_power_of_eight.py  power_function.py  swap_consecutive_bits.py
python/exercises/common/: binary_search_tree.py  graph.py  maze.py  minheap.py  node.py  stoppable_process.py  vertex.py
python/exercises/concurrency/: dining_philosophers.py  producer_consumer.py  reader_writer.py  smokers_problem.py
python/exercises/graphs/: a_star.py  dijkstra.py  insertion.py
python/exercises/other/: atoi.py  coroutines.py  n_choose_k.py  smokers_problem.py
python/exercises/sorting/: mergesort.py  quicksort.py
sorting/: CMakeLists.txt  main.cpp  merge_sort.cpp  merge_sort.h  quick_sort.cpp  quick_sort.h
utils/: BoyerMooreFileSearch.cpp  BoyerMooreFileSearch.h  CMakeLists.txt  array_utils.cpp  array_utils.h  binary_search_tree.cpp  binary_search_tree.h  tree_utils.h
