add_executable (is_int_palindrome is_int_palindrome.cpp)
add_executable (queue_using_stacks queue_using_stacks.cpp)
add_executable (is_power_of_two is_power_of_two.cpp)
add_executable (merge_two_lists merge_two_lists.cpp)
add_executable (is_ugly_number is_ugly_number.cpp)
add_executable (remove_list_duplicates remove_list_duplicates.cpp)
add_executable (reverse_linked_list reverse_linked_list.cpp)
add_executable (roman_to_int roman_to_int.cpp)
add_executable (hamming_weight hamming_weight.cpp)
add_executable (majority_element majority_element.cpp)
add_executable (excel_column_number excel_column_number.cpp)
add_executable (has_duplicate has_duplicate.cpp)
add_executable (tree_min_depth tree_min_depth.cpp)
add_executable (invert_tree invert_tree.cpp)
add_executable (tree_path_sum tree_path_sum.cpp)
add_executable (tree_level_traversal tree_level_traversal.cpp)
add_executable (valid_anagram valid_anagram.cpp)

add_executable (move_zeroes move_zeroes.cpp)
target_include_directories(move_zeroes PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(move_zeroes LINK_PUBLIC utils)

add_executable (remove_array_duplicates remove_array_duplicates.cpp)
target_include_directories(remove_array_duplicates PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(remove_array_duplicates LINK_PUBLIC utils)

add_executable (plus_one plus_one.cpp)
target_include_directories(plus_one PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(plus_one LINK_PUBLIC utils)

add_executable (pascal_triangle pascal_triangle.cpp)
target_include_directories(pascal_triangle PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(pascal_triangle LINK_PUBLIC utils)

add_executable (merge_sorted_arrays merge_sorted_arrays.cpp)
target_include_directories(merge_sorted_arrays PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(merge_sorted_arrays LINK_PUBLIC utils)

